# installer

./: .gitignore  .mise.toml  .prettierignore  CONTRIBUTING.md  Cargo.toml  README.md  eslint.config.js  hai-core  package-lock.json  package.json  renovate.json  src-tauri  vite.config.ts  web-test-runner.config.mjs
.github/: CODEOWNERS  claude-instructions.md  copilot-instructions.md
.github/workflows/: release-mac.yml  test.yml
crates/hai-core/: Cargo.toml
crates/hai-core/src/: devices.rs  disk_writer.rs  download.rs  error.rs  mock.rs  proxmox.rs  utm.rs
crates/hai-desktop/: Cargo.toml  tauri.conf.json
crates/hai-desktop/src/: commands.rs
docs/: project.md
src/: main.ts  styles.css
src-tauri/icons/: icon.icns  icon.png.backup
src-tauri/src/: lib.rs  main.rs
src/api/: commands.ts  mock-data.ts
src/components/: app-shell.ts  confirm-dialog.ts  device-card.ts  drive-card.ts  fab-button.ts  ha-svg-icon.ts  info-dialog.ts  progress-bar.ts  step-indicator.ts  wizard-shell.ts
src/utils/: external-url.ts
src/views/: other-options-view.ts  path-selection-view.ts  welcome-view.ts
src/views/ha-hardware/: device-selection-view.ts
src/views/minipc/: architecture-selection-view.ts  setup-method-view.ts
src/views/proxmox/: proxmox-configure-view.ts  proxmox-confirm-view.ts  proxmox-connect-view.ts  proxmox-progress-view.ts  proxmox-success-view.ts
src/views/sbc/: confirmation-view.ts  device-selection-view.ts  drive-selection-view.ts  progress-view.ts  success-view.ts
src/views/utm/: utm-check-view.ts  utm-configure-view.ts  utm-confirm-view.ts  utm-progress-view.ts  utm-success-view.ts
test/e2e/: ha-hardware-flow.spec.ts  minipc-flow.spec.ts  navigation.spec.ts  other-options-flow.spec.ts  proxmox-flow.spec.ts  utm-flow.spec.ts
test/unit/components/: confirm-dialog.test.ts  drive-card.test.ts  fab-button.test.ts  ha-svg-icon.test.ts  info-dialog.test.ts  wizard-shell.test.ts
test/unit/state/: wizard-state.test.ts
test/unit/utils/: external-url.test.ts
test/unit/views/: path-selection-view.test.ts  welcome-view.test.ts
