[package]
name = "hai-desktop"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Home Assistant Installer - Desktop Application"

[lib]
# The `_lib` suffix is necessary to make the lib name unique
# and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Internal crates
hai-core = { workspace = true, features = ["proxmox", "utm", "mock"] }

# Tauri
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }

# Serialization (for Tauri commands)
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP client (for HA status checks)
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = { workspace = true }
serial_test = { workspace = true }
mockito = { workspace = true }
